<resources>
    <string name="app_name">QRCode</string>
    <string name="title">二維碼/條形碼掃描</string>

    <string name="enter">確定</string>
    <string name="clear">清除</string>
    <string name="cancel">取消</string>
    <string name="name">全名</string>
    <string name="organization">組織</string>
    <string name="address">地址</string>
    <string name="phone">電話號碼</string>
    <string name="email">Email地址</string>
    <string name="detail">筆記</string>
    <string name="choice">選擇icon</string>
    <string name="rect">矩形</string>
    <string name="circle">圓形</string>

    <string name="menu1">掃描</string>
    <string name="menu2">掃描影像</string>
    <string name="menu3">創建二維碼</string>
    <string name="menu4">設定</string>

    <string name="sound">播放提示音</string>
    <string name="isClipData">複製到剪貼板</string>
    <string name="isAutoFocus">自動對焦</string>
    <string name="isAutoFocus2">確定焦點</string>
    <string name="openWeb">自動打開網頁</string>
    <string name="invert">反色</string>

    <string name="dialog_ClipData">複製結果</string>
    <string name="dialog_OpenWeb">打開網頁</string>
    <string name="dialog_OK">OK</string>

</resources>
